# sentiment-analysis-dashboard

./: .gitignore  Makefile  README.md  app.py  documentation.md  pyproject.toml  requirements.txt
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css  main.jsx  theme.js
dashboard/src/components/: Layout.jsx  Navbar.jsx  WordCloud.jsx
dashboard/src/data/: api.jsx  mockData.js
dashboard/src/pages/: BM25DeepDive.jsx  DataInsights.jsx  DocumentSearch.jsx  EmotionAnalysis.jsx  MethodComparison.jsx  Recommendations.jsx  Timeline.jsx  TopicDeepDive.jsx  TopicOverview.jsx
models/: bm25_titles_model.joblib  tfidf_posts_vectorizer.joblib
