[project]
name = "sentiment-analysis-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "joblib>=1.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
]
